@@ -1,3 +1,9 @@
+2007-07-30  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
+
+	* flumotion/component/dvb/dvb.xml:
+	dvb producer does not need to have such a high clock
+	priority so use the default clock priority.
+
 2007-07-04  Arek Korbik  <arkadini@gmail.com>
 
 	* flumotion/component/dvb/dvb.xml:
